--- a/gatsby-theme/src/styles/nav.scss
+++ b/gatsby-theme/src/styles/nav.scss
@@ -125,6 +125,14 @@
                 }
             }
         }
+
+        &.dark-mode {
+            .nav-mobile-toggle {
+                &::before, &::after, span {
+                    background: $white;
+                }
+            }
+        }
     }
 
     &-mobile-toggle {
